[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HybridSNN"
version = "0.0.1"
description = "Hybrid SNN with Addition-Only Attention for multivariate time-series forecasting."
readme = "HybridSNN/README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "protobuf==4.23",
    "utilsd",
    "click",
    "sktime",
    "tqdm",
    "tensorboard",
    "numba",
    "numpy",
    "scikit-learn==1.3",
    "pandas==2.1",
    "snntorch",
    "spikingjelly",
    "tables",
    "h5py",
    "wandb",
]

[project.optional-dependencies]
dev = ["pylint"]

[tool.setuptools.packages.find]
include = ["HybridSNN*"]

[tool.setuptools.package-data]
"HybridSNN" = ["py.typed"]
